Correction partiel controller